--- a/default_prediction_sc.ipynb
+++ b/default_prediction_sc.ipynb
@@ -1516,7 +1516,7 @@
     }
    ],
    "source": [
-    "#We will use the breast cancer data which has 30 features.\n",
+    "#We will use the selected features.\n",
     "#Baseline model\n",
     "#We will use ROC AUC (AUC from here onwards) to evaluate the model. \n",
     "#Let’s get a sense of baseline performance by building a simple model using all the features:\n",
